--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.5",
     "chart.js": "^4.4.4",
+    "emulate-key-in-browser": "^1.0.0-rc.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "math": "^0.0.3",
     "mathjs": "^13.0.3",
     "react": "^18.3.1",
